<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".view.main.FragmentCreateRoom">

    <TextView
        android:id="@+id/text_create_room_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/create_title_en"
        android:textColor="@color/white"
        android:textSize="64dp"
        style="@style/MyTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_create_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_create_room_title">

        <TextView
            android:id="@+id/text_create_room_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:textSize="18dp"
            android:text="@string/create_room_name_hint_en"
            style="@style/MyTextViewStyle"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/frame_create_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_profile_bg"
            app:layout_constraintTop_toBottomOf="@id/text_create_room_hint">

            <EditText
                android:id="@+id/edit_room_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textSize="24dp"
                android:hint="@string/edit_room_name_en"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/white"
                style="@style/MyTextViewStyle"
                android:singleLine="true"
                android:maxLength="30"/>
        </FrameLayout>

        <TextView
            android:id="@+id/text_user_num_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18dp"
            android:text="@string/create_room_num_hint_en"
            style="@style/MyTextViewStyle"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/spinner_user_num"
            app:layout_constraintStart_toStartOf="@id/spinner_user_num"
            app:layout_constraintTop_toBottomOf="@id/frame_create_edit_text"/>

        <Spinner
            android:id="@+id/spinner_user_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/default_profile_bg"
            android:layout_marginTop="2dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/text_user_num_hint"
            app:layout_constraintEnd_toEndOf="@id/frame_create_edit_text"/>

        <LinearLayout
            android:id="@+id/linear_btn_create_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:baselineAligned="true"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/spinner_user_num">

            <FrameLayout
                android:id="@+id/frame_btn_create"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/default_profile_bg"
                app:layout_constraintTop_toBottomOf="@id/spinner_user_num">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_create_room_en"
                    style="@style/MyTextViewStyle"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24dp"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:background="@drawable/default_profile_bg"
                app:layout_constraintTop_toBottomOf="@id/spinner_user_num">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel_room_en"
                    style="@style/MyTextViewStyle"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24dp"/>
            </FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>