<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".view.main.FragmentMyProfile">


    <ImageView
        android:id="@+id/img_tier"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/tier8_stone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linear_profile_list"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toBottomOf="@id/img_tier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cs_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/default_profile_bg">
            <TextView
                android:id="@+id/text_menu_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/fragment_mypage_menu_nickname"
                android:textSize="22dp"
                android:textColor="@color/white"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            
            <ImageView
                android:id="@+id/btn_nickname_modifier"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/icon_pencil"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@id/text_user_nickname"
                app:layout_constraintTop_toTopOf="@id/text_user_nickname"
                app:layout_constraintBottom_toBottomOf="@id/text_user_nickname"/>

            <TextView
                android:id="@+id/text_user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textSize="22dp"
                style="@style/MyTextViewStyle"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cs_change_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="12dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:background="@drawable/default_profile_bg">
            <TextView
                android:id="@+id/text_menu_change_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/fragment_mypage_menu_change"
                android:textSize="22dp"
                android:textColor="@color/white"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/btn_nickname_modifier_select"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/icon_enter"
                app:layout_constraintEnd_toStartOf="@id/edit_user_nickname"
                app:layout_constraintTop_toTopOf="@id/edit_user_nickname"
                app:layout_constraintBottom_toBottomOf="@id/edit_user_nickname"/>

            <EditText
                android:id="@+id/edit_user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:hint="Write nickname"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20dp"
                android:gravity="center"
                android:singleLine="true"
                android:maxLength="10"
                android:inputType="text"
                style="@style/MyTextViewStyle"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cs_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/default_profile_bg">
            <TextView
                android:id="@+id/text_menu_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/fragment_mypage_menu_email"
                android:textSize="22dp"
                android:textColor="@color/white"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textSize="22dp"
                style="@style/MyTextViewStyle"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cs_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/default_profile_bg">
            <TextView
                android:id="@+id/text_menu_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/fragment_mypage_menu_score"
                android:textSize="22dp"
                android:textColor="@color/white"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text_user_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textSize="22dp"
                style="@style/MyTextViewStyle"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cs_tier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/default_profile_bg">
            <TextView
                android:id="@+id/text_menu_tier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/fragment_mypage_menu_tier"
                android:textSize="22dp"
                android:textColor="@color/white"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text_user_tier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textSize="22dp"
                style="@style/MyTextViewStyle"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:padding="8dp"
        android:background="@drawable/default_btn_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <ImageView
            android:id="@+id/img_mypage_google_logout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/icon_login_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_google_logout"
            app:layout_constraintBottom_toBottomOf="parent" />
        
        <TextView
            android:id="@+id/text_google_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textSize="32dp"
            android:text="logout"
            android:textColor="@color/white"
            style="@style/MyTextViewStyle"
            android:letterSpacing="0.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>